# Dataclean

./: .gitignore  LICENSE  README.md  egodex_pipeline_spec.md  requirements.txt  visualize_2d.py
convert/: __init__.py  action_alignment.py  build_egodex_prefilter_step1.py  build_egoverse_prefilter_step1.py  build_xperience_prefilter_step1.py  egodex_loader.py  egodex_npz_to_lerobot_v21_step2.py  egoverse_npz_to_lerobot_v21_step2.py  extract_keypoints.py  smoothing.py  xperience_npz_to_lerobot_v21_step2.py
convert/stage_filter_script/: __init__.py  filter_config.json  filter_config.py  filter_core.py  filter_lerobot_dataset.py  plot_filter_distributions.py
qwen-manip-preprocess/: pyproject.toml  requirements.txt
qwen-manip-preprocess/config/: egodex_add_remove_lid.yaml  humanoid_merged.yaml  robomind_ur_lerobot.yaml
qwen-manip-preprocess/docs/: CONFIG_REFERENCE.md  PIPELINE_GUIDE.md
qwen-manip-preprocess/scripts/: _temp_ur_1rgb_benchmark.py  analyze_experiment.py  analyze_stage1_metrics.py  export_lerobot.py  preprocess_action_from_state.py  run_humanoid_sample.py  run_pipeline.py
qwen-manip-preprocess/src/robot_data_processing/: __init__.py  cli.py  lerobot_export.py  loader.py  mask.py  pipeline.py  preprocess.py  report.py  schema.py  smoothing.py  stage1_stats.py  state_action_lag_stats.py  stats.py  transforms.py  types.py
qwen-manip-preprocess/src/robot_data_processing/stages/: stage1_sudden_change.py  stage2_trend_alignment.py  stage3_extreme_value.py  stage4_static_interval.py  stage5_frame_alignment.py  state_action_temporal_alignment.py
(+6 files in other folders)
