[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-manip-preprocess"
version = "0.1.0"
description = "LeRobot robot dataset quality pipeline (Stage1-5) for humanoid and egodex"
readme = "docs/PIPELINE_GUIDE.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
analyze = [
    "matplotlib>=3.8",
]

[project.scripts]
robot-data-process = "robot_data_processing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
